--- a/style.css
+++ b/style.css
@@ -8,6 +8,6 @@ header {
   text-align: center;
 }
 
-img[title="Welcome to Exceptional Realty Group"] {
-  text-align: center;
+img {
+  align-content: center;
 }
