--- a/style.css
+++ b/style.css
@@ -19,5 +19,8 @@ figcaption {
 }
 
 nav a {
-  
+  padding-right: "10px";
+  padding-left: "10px";
+  text-align: center;
+  background-color: "#14f588"
 }
