--- a/style.css
+++ b/style.css
@@ -22,5 +22,5 @@ nav a {
   padding-right: "10px";
   padding-left: "10px";
   text-align: center;
-  background-color: "#14f588"
+  background-color: "grey"
 }
