--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ figcaption {
 }
 
 nav a {
-  padding-right: "10px";
-  padding-left: "10px";
+  padding-right: 10px;
+  padding-left: 10px;
   text-align: center;
-  background-color: "grey"
+  background-color: grey;
 }
